# tanx-connector-python

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  script.sh  setup.cfg
.github/workflows/: main.yml
example/: bulk_cancel.py  cross_network_deposit.py  deposits.py  eth_network_deposit.py  fast_withdrawals.py  internal_transfers.py  login.py  normal_withdrawals.py  orders.py  polygon_network_deposit.py  rest.py  starknet_deposit.py  temp.py  websocket.py  withdrawals.py
sample/: rest.py
src/brine_wrapper/: blockchain_utils.py  client.py  math_utils.py  session.py  signature.py  utils.py
src/brineconnector/: __init__.py  client.py  constants.py  data_types.py  exception.py  helpers.py  session.py  typings.py  utils.py  wsclient.py
src/tanxconnector/: __init__.py  client.py  constants.py  session.py  starknet.py  temp.js  typings.py  utils.py  wsclient.py
tests/: mock_responses.py  rest.py  test.py  test_client.py  websocket.py
