[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "tanx-connector"
authors = [
  { name="tanX" },
]
license = { file = "LICENSE" }
description = "The official Python connector for Tanx's API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "web3",
    "ecdsa",
    "websockets",
    "sympy",
    "typing-extensions"
]
keywords = ["tanx", "connector", "finance", "api", "wrapper", "python" ]
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.urls]
"Homepage" = "https://github.com/tanx-libs/tanx-connector-python"
"Issues" = "https://github.com/tanx-libs/tanx-connector-python/issues"

[project.optional-dependencies]
dev = [
    "eth-tester",
    "pytest",
    "pytest-mock",
    "responses",
    "pip-tools",
    "bumpver",
    "build",
    "twine",
    "python-dotenv"
]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "update version: v{old_version} -> v{new_version}"
commit = true
push = false

[tool.setuptools.dynamic]
version = {attr = "tanxconnector.__version__"}

[tool.bumpver.file_patterns]
"src/tanxconnector/__init__.py" = [
    '^__version__ = "{version}"$',
]