[metadata]
name = brine_wrapper
version = 0.0.1
author = Brine
# author_email = author@example.com
description = A python wrapper for the Brine API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/upsurge0/brine-wrapper
project_urls =
    Bug Tracker = https://github.com/upsurge0/brine-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
