[metadata]
name = tanx-connector
version = 0.8.0
author = Tanx
# author_email = author@example.com
description = "The official Python connector for Tanx's API"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tanx-libs/tanx-connector-python
project_urls =
    Bug Tracker = https://github.com/tanx-libs/tanx-connector-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
